src/gen/LPPParser.java
// Generated from C:/Users/xabel/IdeaProjects/LPPInterpreter/grammar/LPP.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, MULOP=2, ADOP=3, COMOP=4, BOLOP=5, INICIO=6, FIN=7, ESCRIBA=8, 
		LEA=9, HASTA=10, REPITA=11, PROCEDIMIENTO=12, VAR=13, FUNCION=14, RETORNE=15, 
		LLAMAR=16, SI=17, ENTONCES=18, SINO=19, CASO=20, MIENTRAS=21, HAGA=22, 
		PARA=23, DE=24, NUEVA_LINEA=25, ENTERO=26, REAL=27, CARACTER=28, BOOLEANO=29, 
		CADENA=30, REGISTRO=31, ARREGLO=32, TKN_PLUS=33, TKN_MINUS=34, TKN_POWER=35, 
		TKN_TIMES=36, TKN_DIV=37, MOD=38, DIV=39, TKN_EQUAL=40, TKN_NEQ=41, TKN_GREATER=42, 
		TKN_LESS=43, TKN_GEQ=44, TKN_LEQ=45, OP_Y=46, OP_O=47, TKN_OPENING_PAR=48, 
		TKN_CLOSING_PAR=49, TKN_OPENING_BRA=50, TKN_CLOSING_BRA=51, TKN_COLON=52, 
		TKN_PERIOD=53, TKN_COMMA=54, TKN_ASSIGN=55, TKN_REAL=56, TKN_INTEGER=57, 
		TKN_STR=58, TKN_CHAR=59, VERDADERO=60, FALSO=61, ID=62, NL=63, WS=64, 
		COMMENT=65, LINE_COMMENT=66;
	public static final int
		RULE_program = 0, RULE_registerDeclarations = 1, RULE_registerDeclaration = 2, 
		RULE_funProcDeclarations = 3, RULE_funcDeclaration = 4, RULE_procDeclaration = 5, 
		RULE_parameters = 6, RULE_parameter = 7, RULE_varDeclarations = 8, RULE_varDeclaration = 9, 
		RULE_idList = 10, RULE_varType = 11, RULE_integerList = 12, RULE_funcStmts = 13, 
		RULE_principalBlock = 14, RULE_stmts = 15, RULE_stmt = 16, RULE_printStmt = 17, 
		RULE_readStmt = 18, RULE_assignStmt = 19, RULE_callStmt = 20, RULE_ifStmt = 21, 
		RULE_ifNot = 22, RULE_caseStmt = 23, RULE_caseElement = 24, RULE_listaExprOpcion = 25, 
		RULE_exprOpcion = 26, RULE_rangeExpr = 27, RULE_ifNotCase = 28, RULE_whileStmt = 29, 
		RULE_forStmt = 30, RULE_repeatStmt = 31, RULE_returnStmt = 32, RULE_exprList = 33, 
		RULE_expr = 34, RULE_funCall = 35, RULE_arrayCall = 36, RULE_literal = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "registerDeclarations", "registerDeclaration", "funProcDeclarations", 
			"funcDeclaration", "procDeclaration", "parameters", "parameter", "varDeclarations", 
			"varDeclaration", "idList", "varType", "integerList", "funcStmts", "principalBlock", 
			"stmts", "stmt", "printStmt", "readStmt", "assignStmt", "callStmt", "ifStmt", 
			"ifNot", "caseStmt", "caseElement", "listaExprOpcion", "exprOpcion", 
			"rangeExpr", "ifNotCase", "whileStmt", "forStmt", "repeatStmt", "returnStmt", 
			"exprList", "expr", "funCall", "arrayCall", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'->'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'+'", "'-'", "'^'", 
			"'*'", "'/'", null, null, "'='", "'<>'", "'>'", "'<'", "'>='", "'<='", 
			null, null, "'('", "')'", "'['", "']'", "':'", "'.'", "','", "'<-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "MULOP", "ADOP", "COMOP", "BOLOP", "INICIO", "FIN", "ESCRIBA", 
			"LEA", "HASTA", "REPITA", "PROCEDIMIENTO", "VAR", "FUNCION", "RETORNE", 
			"LLAMAR", "SI", "ENTONCES", "SINO", "CASO", "MIENTRAS", "HAGA", "PARA", 
			"DE", "NUEVA_LINEA", "ENTERO", "REAL", "CARACTER", "BOOLEANO", "CADENA", 
			"REGISTRO", "ARREGLO", "TKN_PLUS", "TKN_MINUS", "TKN_POWER", "TKN_TIMES", 
			"TKN_DIV", "MOD", "DIV", "TKN_EQUAL", "TKN_NEQ", "TKN_GREATER", "TKN_LESS", 
			"TKN_GEQ", "TKN_LEQ", "OP_Y", "OP_O", "TKN_OPENING_PAR", "TKN_CLOSING_PAR", 
			"TKN_OPENING_BRA", "TKN_CLOSING_BRA", "TKN_COLON", "TKN_PERIOD", "TKN_COMMA", 
			"TKN_ASSIGN", "TKN_REAL", "TKN_INTEGER", "TKN_STR", "TKN_CHAR", "VERDADERO", 
			"FALSO", "ID", "NL", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public RegisterDeclarationsContext registerDeclarations() {
			return getRuleContext(RegisterDeclarationsContext.class,0);
		}
		public VarDeclarationsContext varDeclarations() {
			return getRuleContext(VarDeclarationsContext.class,0);
		}
		public FunProcDeclarationsContext funProcDeclarations() {
			return getRuleContext(FunProcDeclarationsContext.class,0);
		}
		public PrincipalBlockContext principalBlock() {
			return getRuleContext(PrincipalBlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			registerDeclarations();
			setState(77);
			varDeclarations();
			setState(78);
			funProcDeclarations();
			setState(79);
			principalBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegisterDeclarationsContext extends ParserRuleContext {
		public List<RegisterDeclarationContext> registerDeclaration() {
			return getRuleContexts(RegisterDeclarationContext.class);
		}
		public RegisterDeclarationContext registerDeclaration(int i) {
			return getRuleContext(RegisterDeclarationContext.class,i);
		}
		public RegisterDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_registerDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterRegisterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitRegisterDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitRegisterDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegisterDeclarationsContext registerDeclarations() throws RecognitionException {
		RegisterDeclarationsContext _localctx = new RegisterDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_registerDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==REGISTRO) {
				{
				{
				setState(81);
				registerDeclaration();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegisterDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> REGISTRO() { return getTokens(LPPParser.REGISTRO); }
		public TerminalNode REGISTRO(int i) {
			return getToken(LPPParser.REGISTRO, i);
		}
		public TerminalNode ID() { return getToken(LPPParser.ID, 0); }
		public VarDeclarationsContext varDeclarations() {
			return getRuleContext(VarDeclarationsContext.class,0);
		}
		public TerminalNode FIN() { return getToken(LPPParser.FIN, 0); }
		public RegisterDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_registerDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterRegisterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitRegisterDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitRegisterDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegisterDeclarationContext registerDeclaration() throws RecognitionException {
		RegisterDeclarationContext _localctx = new RegisterDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_registerDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(REGISTRO);
			setState(88);
			match(ID);
			setState(89);
			varDeclarations();
			setState(90);
			match(FIN);
			setState(91);
			match(REGISTRO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunProcDeclarationsContext extends ParserRuleContext {
		public List<ProcDeclarationContext> procDeclaration() {
			return getRuleContexts(ProcDeclarationContext.class);
		}
		public ProcDeclarationContext procDeclaration(int i) {
			return getRuleContext(ProcDeclarationContext.class,i);
		}
		public List<FuncDeclarationContext> funcDeclaration() {
			return getRuleContexts(FuncDeclarationContext.class);
		}
		public FuncDeclarationContext funcDeclaration(int i) {
			return getRuleContext(FuncDeclarationContext.class,i);
		}
		public FunProcDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funProcDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterFunProcDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitFunProcDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitFunProcDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunProcDeclarationsContext funProcDeclarations() throws RecognitionException {
		FunProcDeclarationsContext _localctx = new FunProcDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funProcDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PROCEDIMIENTO || _la==FUNCION) {
				{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROCEDIMIENTO:
					{
					setState(93);
					procDeclaration();
					}
					break;
				case FUNCION:
					{
					setState(94);
					funcDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(LPPParser.FUNCION, 0); }
		public TerminalNode ID() { return getToken(LPPParser.ID, 0); }
		public TerminalNode TKN_COLON() { return getToken(LPPParser.TKN_COLON, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public VarDeclarationsContext varDeclarations() {
			return getRuleContext(VarDeclarationsContext.class,0);
		}
		public TerminalNode INICIO() { return getToken(LPPParser.INICIO, 0); }
		public FuncStmtsContext funcStmts() {
			return getRuleContext(FuncStmtsContext.class,0);
		}
		public TerminalNode FIN() { return getToken(LPPParser.FIN, 0); }
		public TerminalNode TKN_OPENING_PAR() { return getToken(LPPParser.TKN_OPENING_PAR, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode TKN_CLOSING_PAR() { return getToken(LPPParser.TKN_CLOSING_PAR, 0); }
		public FuncDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterFuncDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitFuncDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitFuncDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDeclarationContext funcDeclaration() throws RecognitionException {
		FuncDeclarationContext _localctx = new FuncDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(FUNCION);
			setState(101);
			match(ID);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TKN_OPENING_PAR) {
				{
				setState(102);
				match(TKN_OPENING_PAR);
				setState(103);
				parameters();
				setState(104);
				match(TKN_CLOSING_PAR);
				}
			}

			setState(108);
			match(TKN_COLON);
			setState(109);
			varType();
			setState(110);
			varDeclarations();
			setState(111);
			match(INICIO);
			setState(112);
			funcStmts();
			setState(113);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcDeclarationContext extends ParserRuleContext {
		public TerminalNode PROCEDIMIENTO() { return getToken(LPPParser.PROCEDIMIENTO, 0); }
		public TerminalNode ID() { return getToken(LPPParser.ID, 0); }
		public VarDeclarationsContext varDeclarations() {
			return getRuleContext(VarDeclarationsContext.class,0);
		}
		public TerminalNode INICIO() { return getToken(LPPParser.INICIO, 0); }
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public TerminalNode FIN() { return getToken(LPPParser.FIN, 0); }
		public TerminalNode TKN_OPENING_PAR() { return getToken(LPPParser.TKN_OPENING_PAR, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode TKN_CLOSING_PAR() { return getToken(LPPParser.TKN_CLOSING_PAR, 0); }
		public ProcDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterProcDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitProcDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitProcDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcDeclarationContext procDeclaration() throws RecognitionException {
		ProcDeclarationContext _localctx = new ProcDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(PROCEDIMIENTO);
			setState(116);
			match(ID);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TKN_OPENING_PAR) {
				{
				setState(117);
				match(TKN_OPENING_PAR);
				setState(118);
				parameters();
				setState(119);
				match(TKN_CLOSING_PAR);
				}
			}

			setState(123);
			varDeclarations();
			setState(124);
			match(INICIO);
			setState(125);
			stmts();
			setState(126);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> TKN_COMMA() { return getTokens(LPPParser.TKN_COMMA); }
		public TerminalNode TKN_COMMA(int i) {
			return getToken(LPPParser.TKN_COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			parameter();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TKN_COMMA) {
				{
				{
				setState(129);
				match(TKN_COMMA);
				setState(130);
				parameter();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(LPPParser.ID, 0); }
		public TerminalNode VAR() { return getToken(LPPParser.VAR, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(136);
				match(VAR);
				}
			}

			setState(139);
			varType();
			setState(140);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationsContext extends ParserRuleContext {
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public VarDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).enterVarDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPPListener ) ((LPPListener)listener).exitVarDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPPVisitor ) return ((LPPVisitor<? extends T>)visitor).visitVarDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationsContext varDeclarations() throws RecognitionException {
		VarDeclarationsContext _localctx = new VarDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4611686024802729984L) != 0)) {
				{
				{
				setState(142);
				varDeclaration();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
